--- a/css/responsive.css
+++ b/css/responsive.css
@@ -670,10 +670,10 @@
 
   .hero-header {
     text-align: center;
-    font-size: 160px;
+    font-size: 120px;
     font-family: "DIN";
-    color: #1a5f30;
-    height: 160px;
+    color: #fe4a0f;
+    height: 130px;
   }
 
   .vectorButton {
@@ -2519,7 +2519,7 @@
     text-align: center;
     font-size: 120px;
     font-family: "DIN";
-    color: #1a5f30;
+    color: #fe4a0f;
     height: 130px;
   }
 
@@ -2645,6 +2645,16 @@
   /* menu end */
 
   /* baner start */
+
+  .logo {
+    width: 100px;
+    height: auto;
+    margin-left: 10px;
+  }
+
+  .team {
+    margin-top: 25px;
+  }
 
   .content {
     display: flex;
@@ -2823,6 +2833,10 @@
   }
 
   /* banner end */
+
+  .section_heading {
+    margin-bottom: 0;
+  }
 
   .section_heading h2 {
     font-size: 25px;
@@ -3378,7 +3392,7 @@
     text-align: center;
     font-size: 68px;
     font-family: "DIN";
-    color: #1a5f30;
+    color: #fe4a0f;
     height: 70px;
   }
 
